# todo-list

./: Cargo.toml  diesel.toml
migrations/2024-07-30-015326_add_tasks_table/: up.sql
migrations/2024-08-20-214212_create_users_table/: up.sql
src/: main.rs  schema.rs
src/modules/auth/: mod.rs
src/modules/auth/login/: controller.rs  request_dto.rs  response_dto.rs  service.rs
src/modules/tasks/: mod.rs
src/modules/tasks/create/: controller.rs  mod.rs  request_dto.rs  service.rs
src/modules/tasks/delete/: controller.rs  service.rs
src/modules/tasks/get/: controller.rs  service.rs
src/modules/tasks/list/: controller.rs  mod.rs  response_dto.rs  service.rs
src/modules/tasks/update/: controller.rs  mod.rs  request_dto.rs  service.rs
src/modules/users/: mod.rs
src/modules/users/create/: controller.rs  request_dto.rs  response_dto.rs  service.rs
src/shared/: mod.rs
src/shared/dtos/: response.rs
src/shared/entities/: tasks.rs  users.rs
src/shared/repositories/: tasks.rs  users.rs
src/shared/structs/: application.rs
src/shared/utils/: database.rs  jwt.rs  mod.rs
