[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
diesel = { version = "2.2.2", features = ["postgres", "chrono", "uuid"] }
dotenvy = "0.15.7"
rocket = { version = "0.5.1", features = ["json"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
