[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.2", features = ["postgres", "chrono", "uuid"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.125"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
